k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: booking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.0
          args: ["start", "--hostname=booking.local", "--http-enabled=true"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-data
              mountPath: /opt/keycloak/data
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: booking-app
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
